--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 
 <body>
+    <!-- navigation -->
     <header class="header">
         <h1>
-            <a href="/">Hori<span class="seo">seo</span>n</a>
+            <a href="/">
+                Hori<span class="seo">seo</span>n
+            </a>
         </h1>
         <nav>
+            <!-- site navigation links -->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -27,32 +31,55 @@
         </nav>
     </header>
 
+    <!-- hero/jumbotron -->
     <section class="hero"></section>
+
+    <!-- main content -->
     <section class="content">
-        <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
+
+        <!-- search engine optimization -->
+        <article id="search-engine-optimization" class="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" 
+                    alt="wood table with laptop, magnifying glass, pens and notebook with S.E.O written in a bubble with surrounding words: 'content', 'headings', 'mobile compatibility', 'social media', 'link building', and 'backlink'" 
+                        class="float-left" />
+            <h2>
+                Search Engine Optimization
+            </h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
+
+        <!-- online reputation management -->
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
+            <img src="./assets/images/online-reputation-management.jpg" 
+                    alt="business professional using laptop showing increasing graph labeled reputation" 
+                        class="float-right" />
+            <h2>
+                Online Reputation Management
+            </h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
+
+        <!-- social media marketing -->
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
+            <img src="./assets/images/social-media-marketing.jpg" 
+                    alt="peer group sitting at a table with speech bubbles: 'share', 'media', 'tweet', 'like organized around the table'" 
+                        class="float-left" />
+            <h2>
+                Social Media Marketing
+            </h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
     </section>
 
+    <!-- side content -->
     <aside class="benefits">
+        <!-- benefit lead -->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -60,6 +87,8 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
+
+        <!-- benefit brand -->
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -67,6 +96,8 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
+
+        <!-- benefit cost -->
         <article class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
@@ -76,6 +107,7 @@
         </article>
     </aside>
 
+    <!-- footer -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
