condensed css, removed excess classes from html elements

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="content">
 
         <!-- search engine optimization -->
-        <article id="search-engine-optimization" class="search-engine-optimization">
+        <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" 
                     alt="wood table with laptop, magnifying glass, pens and notebook with S.E.O written in a bubble with surrounding words: 'content', 'headings', 'mobile compatibility', 'social media', 'link building', and 'backlink'" 
                         class="float-left" />
@@ -51,7 +51,7 @@
         </article>
 
         <!-- online reputation management -->
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" 
                     alt="business professional using laptop showing increasing graph labeled reputation" 
                         class="float-right" />
@@ -64,7 +64,7 @@
         </article>
 
         <!-- social media marketing -->
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" 
                     alt="peer group sitting at a table with speech bubbles: 'share', 'media', 'tweet', 'like organized around the table'" 
                         class="float-left" />
@@ -80,7 +80,7 @@
     <!-- side content -->
     <aside class="benefits">
         <!-- benefit lead -->
-        <article class="benefit-lead">
+        <article>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -89,7 +89,7 @@
         </article>
 
         <!-- benefit brand -->
-        <article class="benefit-brand">
+        <article>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -98,7 +98,7 @@
         </article>
 
         <!-- benefit cost -->
-        <article class="benefit-cost">
+        <article>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
